--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "3",
+  "name": "node-web-server",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4",
-    "hbs": "^4.0.1"
+    "express": "^4.14.0",
+    "hbs": "^4.0.0"
   }
 }
